Code restructure, fixing GEE exports incl. Sentinel-2 metrics

--- a/Aim2/code/Python/02afd-modis-viirs_archive-nifc.ipynb
+++ b/Aim2/code/Python/02afd-modis-viirs_archive-nifc.ipynb
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e8c0d755-6bcd-4dde-bf26-9cbf2eb5c450",
    "metadata": {},
    "outputs": [],
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "8d3af239-bf7c-4bb8-a520-71a4c3098895",
    "metadata": {},
    "outputs": [
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "14875a2e-1373-4e1a-808e-96935ef3477a",
    "metadata": {},
    "outputs": [
@@ -1088,8 +1088,7 @@
      "output_type": "stream",
      "text": [
       "Number of fires before filtering: 144964\n",
-      "Number of fires after filtering: 144954\n",
-      "Number of obs. after filtering: 144954\n"
+      "Number of fires after filtering: 144954\n"
      ]
     }
    ],
@@ -1111,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "c22ce608-72f3-4e1f-aeb8-09b8d3863bea",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "2431be7f-8592-4ce7-966d-4ef04d80dcc4",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "1c5c41f5-d9d6-4ddc-b1f6-9cde4b9e4ba0",
    "metadata": {},
    "outputs": [],
@@ -1161,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "a6eb9190-bdda-41d3-8784-9b0216fe5ad0",
    "metadata": {},
    "outputs": [
@@ -1214,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "1e9db5b8-9f2d-4614-b704-46bda016329f",
    "metadata": {},
    "outputs": [],
@@ -1224,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "afaccd08-4fb4-4c2a-91dd-1fd55e94e9fd",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1233,7 @@
        "array(['MODIS', 'VIIRS'], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "id": "af64dbed-18ca-4b28-a8a7-5f432d002e6c",
    "metadata": {},
    "outputs": [
@@ -1317,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "6d23526a-6549-496b-b0c7-09cdbceae91c",
    "metadata": {},
    "outputs": [],
@@ -1335,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "id": "521409fc-0a43-4354-9f21-88190f22cecb",
    "metadata": {},
    "outputs": [
@@ -1348,7 +1347,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "id": "c36f20a2-edf6-42cb-8fc5-32dbf2c091a8",
    "metadata": {},
    "outputs": [
@@ -1378,7 +1377,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "id": "8127bf0a-3ce3-4c9f-a4a0-5d21004113a5",
    "metadata": {},
    "outputs": [
@@ -1404,7 +1403,7 @@
        "61"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1415,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "id": "39c1446f-17a2-4e1f-a8af-69209b1d97ea",
    "metadata": {},
    "outputs": [
@@ -1442,6 +1441,8 @@
        "      <th></th>\n",
        "      <th>Fire_ID</th>\n",
        "      <th>Fire_Name</th>\n",
+       "      <th>DISCOVERY_DOY</th>\n",
+       "      <th>WF_CESSATION_DOY</th>\n",
        "      <th>Fire_Year</th>\n",
        "      <th>Start_Day</th>\n",
        "      <th>End_Day</th>\n",
@@ -1453,6 +1454,8 @@
        "      <th>0</th>\n",
        "      <td>100763</td>\n",
        "      <td>PARK CREEK</td>\n",
+       "      <td>272</td>\n",
+       "      <td>286</td>\n",
        "      <td>2022</td>\n",
        "      <td>152</td>\n",
        "      <td>258</td>\n",
@@ -1462,6 +1465,8 @@
        "      <th>1</th>\n",
        "      <td>1055</td>\n",
        "      <td>RATTLESNAKE</td>\n",
+       "      <td>232</td>\n",
+       "      <td>236</td>\n",
        "      <td>2020</td>\n",
        "      <td>152</td>\n",
        "      <td>258</td>\n",
@@ -1471,6 +1476,8 @@
        "      <th>2</th>\n",
        "      <td>1070</td>\n",
        "      <td>GREEN RIDGE</td>\n",
+       "      <td>188</td>\n",
+       "      <td>250</td>\n",
        "      <td>2021</td>\n",
        "      <td>152</td>\n",
        "      <td>258</td>\n",
@@ -1480,6 +1487,8 @@
        "      <th>3</th>\n",
        "      <td>12229</td>\n",
        "      <td>SCHAEFFER</td>\n",
+       "      <td>251</td>\n",
+       "      <td>272</td>\n",
        "      <td>2019</td>\n",
        "      <td>152</td>\n",
        "      <td>258</td>\n",
@@ -1489,6 +1498,8 @@
        "      <th>4</th>\n",
        "      <td>13137</td>\n",
        "      <td>COUGAR</td>\n",
+       "      <td>305</td>\n",
+       "      <td>315</td>\n",
        "      <td>2020</td>\n",
        "      <td>152</td>\n",
        "      <td>258</td>\n",
@@ -1499,22 +1510,22 @@
        "</div>"
       ],
       "text/plain": [
-       "  Fire_ID    Fire_Name Fire_Year Start_Day End_Day  \\\n",
-       "0  100763   PARK CREEK      2022       152     258   \n",
-       "1    1055  RATTLESNAKE      2020       152     258   \n",
-       "2    1070  GREEN RIDGE      2021       152     258   \n",
-       "3   12229    SCHAEFFER      2019       152     258   \n",
-       "4   13137       COUGAR      2020       152     258   \n",
+       "  Fire_ID    Fire_Name DISCOVERY_DOY WF_CESSATION_DOY Fire_Year Start_Day  \\\n",
+       "0  100763   PARK CREEK           272              286      2022       152   \n",
+       "1    1055  RATTLESNAKE           232              236      2020       152   \n",
+       "2    1070  GREEN RIDGE           188              250      2021       152   \n",
+       "3   12229    SCHAEFFER           251              272      2019       152   \n",
+       "4   13137       COUGAR           305              315      2020       152   \n",
        "\n",
-       "                                            geometry  \n",
-       "0  POLYGON ((-1302777.051 2935597.721, -1304470.8...  \n",
-       "1  POLYGON ((-1662672.883 2765896.178, -1665553.8...  \n",
-       "2  POLYGON ((-1648322.560 2755617.377, -1673173.6...  \n",
-       "3  POLYGON ((-1978906.428 1675019.040, -1982045.2...  \n",
-       "4  POLYGON ((-1587662.179 2645713.160, -1590213.9...  "
+       "  End_Day                                           geometry  \n",
+       "0     258  POLYGON ((-1302777.051 2935597.721, -1304470.8...  \n",
+       "1     258  POLYGON ((-1662672.883 2765896.178, -1665553.8...  \n",
+       "2     258  POLYGON ((-1648322.560 2755617.377, -1673173.6...  \n",
+       "3     258  POLYGON ((-1978906.428 1675019.040, -1982045.2...  \n",
+       "4     258  POLYGON ((-1587662.179 2645713.160, -1590213.9...  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1528,7 +1539,7 @@
     "afd_fire_bounds_.loc[afd_fire_bounds_['STUSPS'].isin(special_case), ['Start_Day', 'End_Day']] = (91, 181)\n",
     "afd_fire_bounds_.loc[~afd_fire_bounds_['STUSPS'].isin(special_case), ['Start_Day', 'End_Day']] = (152, 258)\n",
     "\n",
-    "afd_fire_bounds_ = afd_fire_bounds_[['NIFC_ID','NIFC_NAME','START_YEAR','Start_Day','End_Day','geometry']]\n",
+    "afd_fire_bounds_ = afd_fire_bounds_[['NIFC_ID','NIFC_NAME','DISCOVERY_DOY','WF_CESSATION_DOY','START_YEAR','Start_Day','End_Day','geometry']]\n",
     "afd_fire_bounds_ = afd_fire_bounds_.rename(columns={\n",
     "    'NIFC_ID': 'Fire_ID', \n",
     "    'NIFC_NAME': 'Fire_Name',\n",
@@ -1539,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "id": "836a2bed-534f-4b19-a6b9-e08be792fbda",
    "metadata": {},
    "outputs": [
@@ -1561,17 +1572,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "id": "e124db6e-c51a-46c2-8783-879bac319421",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13884"
+       "0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1589,17 +1600,162 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "032f70ef-e11b-4d81-9a67-540b44624976",
+   "cell_type": "markdown",
+   "id": "839fb66f-e5db-4beb-8a86-8327579e7894",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Create a time-series product for GRIDMET\n",
+    "\n",
+    "This needs to be a daily polygon that can be used to summarize gridmet variables for each observation. For now, taking the union of each daily FRP observation should do the trick."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "53cf674d-4bad-4a00-8f14-b27beab589ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved daily polygons to /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/earth-engine/imports/afd_aspen-fires_2018_to_2023_bounds_daily.shp\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an acquisition Day of Year\n",
+    "afd_events_plots_c['ACQ_DOY'] = afd_events_plots_c['ACQ_DATETIME'].dt.dayofyear\n",
+    "\n",
+    "# Group the AFDs by fire ID and acquisition date\n",
+    "daily_polygons = [] # to store the daily polygons\n",
+    "for (fire_id, year, doy), group in afd_events_plots_c.groupby(['NIFC_ID', 'START_YEAR', 'ACQ_DOY']):\n",
+    "    # Get the geometry of the group (polygons)\n",
+    "    polygons = group.geometry\n",
+    "    # Create a union of the polygons for the day\n",
+    "    if len(polygons) > 1:\n",
+    "        union_polygon = polygons.unary_union  # Union of all polygons\n",
+    "    else:\n",
+    "        union_polygon = polygons.iloc[0]  # If only one polygon, just use it\n",
+    "    \n",
+    "    # Create a GeoDataFrame row for the union polygon\n",
+    "    daily_polygons.append({\n",
+    "        'NIFC_ID': fire_id,\n",
+    "        'FIRE_YEAR': year,\n",
+    "        'ACQ_DOY': doy,\n",
+    "        'geometry': union_polygon\n",
+    "    })\n",
+    "\n",
+    "# Convert the list of dictionaries to a GeoDataFrame\n",
+    "daily_polygons_gdf = gpd.GeoDataFrame(daily_polygons, crs=afd_events_plots_c.crs)\n",
+    "\n",
+    "out_fp = os.path.join(projdir, f'data/earth-engine/imports/afd_aspen-fires_2018_to_2023_bounds_daily.shp')\n",
+    "daily_polygons_gdf.to_file(out_fp)\n",
+    "print(f\"Saved daily polygons to {out_fp}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "72d072f1-20d2-4f0f-be52-cfcd8a916f10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NIFC_ID</th>\n",
+       "      <th>FIRE_YEAR</th>\n",
+       "      <th>ACQ_DOY</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100763</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>278</td>\n",
+       "      <td>POLYGON ((-1302924.731 2938127.779, -1302924.7...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100763</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>279</td>\n",
+       "      <td>POLYGON ((-1304119.767 2936849.317, -1304119.7...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100763</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>280</td>\n",
+       "      <td>POLYGON ((-1303310.031 2937490.782, -1303685.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100763</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>281</td>\n",
+       "      <td>POLYGON ((-1303467.796 2938138.289, -1303467.7...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100763</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>282</td>\n",
+       "      <td>POLYGON ((-1303703.880 2937442.765, -1303703.8...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  NIFC_ID  FIRE_YEAR  ACQ_DOY  \\\n",
+       "0  100763       2022      278   \n",
+       "1  100763       2022      279   \n",
+       "2  100763       2022      280   \n",
+       "3  100763       2022      281   \n",
+       "4  100763       2022      282   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  POLYGON ((-1302924.731 2938127.779, -1302924.7...  \n",
+       "1  POLYGON ((-1304119.767 2936849.317, -1304119.7...  \n",
+       "2  POLYGON ((-1303310.031 2937490.782, -1303685.0...  \n",
+       "3  POLYGON ((-1303467.796 2938138.289, -1303467.7...  \n",
+       "4  POLYGON ((-1303703.880 2937442.765, -1303703.8...  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_polygons_gdf.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9118175b-e3cc-4ef9-a0ad-9c92502fd8b7",
+   "id": "7ac6532a-65e1-4684-8f21-11f93cf14eaa",
    "metadata": {},
    "outputs": [],
    "source": []
