--- a/Aim2/code/Python/05afd-s2-metrics.ipynb
+++ b/Aim2/code/Python/05afd-s2-metrics.ipynb
@@ -643,6 +643,190 @@
       "Waiting for export to finish..\n",
       "\tPatience young padawan.\n",
       "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
       "\tPatience young padawan.\n"
      ]
     }
