--- a/Aim2/code/Python/08afd-model_data.ipynb
+++ b/Aim2/code/Python/08afd-model_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d5c35bd8-cf8c-4e91-b38b-9d95f5492940",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,7 @@
     "\"\"\"\n",
     "\n",
     "import os, sys, time, gc\n",
+    "import pandas as pd\n",
     "\n",
     "# Custom functions\n",
     "sys.path.append(os.path.join(os.getcwd(),'code/'))\n",
@@ -27,14 +28,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "37ca89f9-150b-4c62-b882-6e202faca1f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>system:index</th>\n",
+       "      <th>ACQ_DOY</th>\n",
+       "      <th>FIRE_YEAR</th>\n",
+       "      <th>NIFC_ID</th>\n",
+       "      <th>bi</th>\n",
+       "      <th>erc</th>\n",
+       "      <th>eto</th>\n",
+       "      <th>etr</th>\n",
+       "      <th>fm100</th>\n",
+       "      <th>fm1000</th>\n",
+       "      <th>...</th>\n",
+       "      <th>rmax</th>\n",
+       "      <th>rmin</th>\n",
+       "      <th>sph</th>\n",
+       "      <th>srad</th>\n",
+       "      <th>th</th>\n",
+       "      <th>tmmn</th>\n",
+       "      <th>tmmx</th>\n",
+       "      <th>vpd</th>\n",
+       "      <th>vs</th>\n",
+       "      <th>.geo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000000000000000000b3</td>\n",
+       "      <td>257</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>13378</td>\n",
+       "      <td>41.5</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>4.70</td>\n",
+       "      <td>6.35</td>\n",
+       "      <td>6.80</td>\n",
+       "      <td>13.300000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>43.299999</td>\n",
+       "      <td>11.250000</td>\n",
+       "      <td>0.004415</td>\n",
+       "      <td>244.149994</td>\n",
+       "      <td>196.5</td>\n",
+       "      <td>284.150024</td>\n",
+       "      <td>298.049988</td>\n",
+       "      <td>1.710</td>\n",
+       "      <td>2.45</td>\n",
+       "      <td>{\"type\":\"Polygon\",\"coordinates\":[[[-106.853361...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000000000000000000b4</td>\n",
+       "      <td>258</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>13378</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>6.20</td>\n",
+       "      <td>6.95</td>\n",
+       "      <td>12.950001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>54.650002</td>\n",
+       "      <td>16.299999</td>\n",
+       "      <td>0.005630</td>\n",
+       "      <td>240.549988</td>\n",
+       "      <td>182.5</td>\n",
+       "      <td>283.750000</td>\n",
+       "      <td>297.850006</td>\n",
+       "      <td>1.530</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>{\"type\":\"Polygon\",\"coordinates\":[[[-106.853016...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000000000000000000b5</td>\n",
+       "      <td>203</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>13494</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>43.5</td>\n",
+       "      <td>5.85</td>\n",
+       "      <td>7.65</td>\n",
+       "      <td>10.40</td>\n",
+       "      <td>15.250000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>63.599998</td>\n",
+       "      <td>18.350000</td>\n",
+       "      <td>0.007925</td>\n",
+       "      <td>256.450012</td>\n",
+       "      <td>167.5</td>\n",
+       "      <td>286.400024</td>\n",
+       "      <td>302.799988</td>\n",
+       "      <td>1.890</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>{\"type\":\"Polygon\",\"coordinates\":[[[-105.825883...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000000000000000000b6</td>\n",
+       "      <td>204</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>13494</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>5.30</td>\n",
+       "      <td>6.85</td>\n",
+       "      <td>13.05</td>\n",
+       "      <td>15.850000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>84.050003</td>\n",
+       "      <td>28.049999</td>\n",
+       "      <td>0.009730</td>\n",
+       "      <td>239.799988</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>284.850006</td>\n",
+       "      <td>300.599976</td>\n",
+       "      <td>1.335</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>{\"type\":\"Polygon\",\"coordinates\":[[[-105.822481...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000000000000000000b7</td>\n",
+       "      <td>219</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>13494</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>6.80</td>\n",
+       "      <td>8.90</td>\n",
+       "      <td>14.350000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>63.150002</td>\n",
+       "      <td>20.150002</td>\n",
+       "      <td>0.007380</td>\n",
+       "      <td>254.949997</td>\n",
+       "      <td>188.0</td>\n",
+       "      <td>284.649994</td>\n",
+       "      <td>298.399994</td>\n",
+       "      <td>1.420</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>{\"type\":\"Polygon\",\"coordinates\":[[[-105.821366...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           system:index  ACQ_DOY  FIRE_YEAR  NIFC_ID    bi   erc   eto   etr  \\\n",
+       "0  000000000000000000b3      257       2018    13378  41.5  57.0  4.70  6.35   \n",
+       "1  000000000000000000b4      258       2018    13378  42.0  57.0  4.60  6.20   \n",
+       "2  000000000000000000b5      203       2018    13494  19.0  43.5  5.85  7.65   \n",
+       "3  000000000000000000b6      204       2018    13494   0.0  31.0  5.30  6.85   \n",
+       "4  000000000000000000b7      219       2018    13494  38.0  49.0  5.25  6.80   \n",
+       "\n",
+       "   fm100     fm1000  ...       rmax       rmin       sph        srad     th  \\\n",
+       "0   6.80  13.300000  ...  43.299999  11.250000  0.004415  244.149994  196.5   \n",
+       "1   6.95  12.950001  ...  54.650002  16.299999  0.005630  240.549988  182.5   \n",
+       "2  10.40  15.250000  ...  63.599998  18.350000  0.007925  256.450012  167.5   \n",
+       "3  13.05  15.850000  ...  84.050003  28.049999  0.009730  239.799988  140.0   \n",
+       "4   8.90  14.350000  ...  63.150002  20.150002  0.007380  254.949997  188.0   \n",
+       "\n",
+       "         tmmn        tmmx    vpd    vs  \\\n",
+       "0  284.150024  298.049988  1.710  2.45   \n",
+       "1  283.750000  297.850006  1.530  2.60   \n",
+       "2  286.400024  302.799988  1.890  3.20   \n",
+       "3  284.850006  300.599976  1.335  3.30   \n",
+       "4  284.649994  298.399994  1.420  3.00   \n",
+       "\n",
+       "                                                .geo  \n",
+       "0  {\"type\":\"Polygon\",\"coordinates\":[[[-106.853361...  \n",
+       "1  {\"type\":\"Polygon\",\"coordinates\":[[[-106.853016...  \n",
+       "2  {\"type\":\"Polygon\",\"coordinates\":[[[-105.825883...  \n",
+       "3  {\"type\":\"Polygon\",\"coordinates\":[[[-105.822481...  \n",
+       "4  {\"type\":\"Polygon\",\"coordinates\":[[[-105.821366...  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Load the statistics dataframes\n",
-    "\n",
-    "gridmet_fp = os.path.join(projdir,'data/earth-engine/exports/gridmet/"
+    "# Load the GRIDMET data\n",
+    "gridmet_fp = os.path.join(projdir,'data/earth-engine/exports/gridmet/afd_aspen-fires_2018_to_2023_bounds_daily-gridmet_stats.csv')\n",
+    "gridmet = pd.read_csv(gridmet_fp)\n",
+    "gridmet.head()"
    ]
   },
   {
