Update to 04afd-landcover-biophys.ipynb adding BPS

--- a/Aim2/code/Python/05afd-s2-metrics.ipynb
+++ b/Aim2/code/Python/05afd-s2-metrics.ipynb
@@ -827,6 +827,18 @@
       "Waiting for export to finish..\n",
       "\tPatience young padawan.\n",
       "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
       "\tPatience young padawan.\n"
      ]
     }
